infra/k8s/monitoring-stream/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: monitoring-stream-ws
spec:
  selector:
    matchLabels:
      app: monitoring-stream-ws
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: monitoring-stream-ws
    spec:
      containers:
      - name: monitoring-stream-ws
        image: frikanalen/monitoring-stream-ws:latest
        ports:
          - name: ts-http
            containerPort: 8081
          - name: ws
            containerPort: 8082
